--- a/3 raz/3 raz/3 raz.csproj
+++ b/3 raz/3 raz/3 raz.csproj
@@ -46,14 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="country.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Player.cs" />
+    <Compile Include="PositionName.cs" />
+    <Compile Include="PositionOfPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Team.cs" />
+    <Compile Include="Teams Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teams Main.Designer.cs">
+      <DependentUpon>Teams Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Visitor Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +83,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Teams Main.resx">
+      <DependentUpon>Teams Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visitor Menu.resx">
+      <DependentUpon>Visitor Menu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
