--- a/3 raz/3 raz/3 raz.csproj
+++ b/3 raz/3 raz/3 raz.csproj
@@ -58,6 +58,12 @@
     <Compile Include="PositionOfPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Team Detail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Team Detail.Designer.cs">
+      <DependentUpon>Team Detail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Team.cs" />
     <Compile Include="Teams Main.cs">
       <SubType>Form</SubType>
@@ -83,6 +89,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Team Detail.resx">
+      <DependentUpon>Team Detail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Teams Main.resx">
       <DependentUpon>Teams Main.cs</DependentUpon>
     </EmbeddedResource>
